# Nebula

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish-runtime.yml
docs/: author-in-nebula-ship-as-python.md
examples/: agent_counter.neb  agent_lib.neb  agent_lib_harness.py  end_demo.neb  fizzbuzz.neb  hello.neb  import_demo.neb  io_agent.neb  io_config.json  push_demo.neb  runbook.neb
grammar/: nebula.gbnf
nebula-ast/: Cargo.toml
nebula-ast/src/: diagnostic_extract.rs  diagnostic_json.rs  json.rs  lib.rs  neb_error.rs
nebula-ast/tests/: json_tests.rs
nebula-builtins/: Cargo.toml  builtins.toml
nebula-builtins/src/: lib.rs
nebula-builtins/tests/: python_sync.rs
nebula-cli/: Cargo.toml
nebula-cli/src/: main.rs
nebula-cli/tests/: agent_harness_tests.rs  compile_tests.rs  e2e.rs
nebula-diagnostics/: Cargo.toml
nebula-diagnostics/src/: lib.rs
nebula-fmt/: Cargo.toml
nebula-fmt/src/: lib.rs
nebula-fmt/tests/: fmt_tests.rs  import_fmt_tests.rs
nebula-host/: Cargo.toml
nebula-host/src/: lib.rs  pipeline.rs  run_record.rs
nebula-host/tests/: host_tests.rs  run_record_tests.rs
nebula-ir/: Cargo.toml
nebula-ir/src/: diagnostic_extract.rs  lib.rs
nebula-ir/tests/: lower_tests.rs
nebula-load/: Cargo.toml
nebula-load/src/: diagnostic_extract.rs  lib.rs
nebula-load/tests/: import_tests.rs  workspace_tests.rs
nebula-mcp/: Cargo.toml
nebula-mcp/src/: config.rs  error.rs  lib.rs  manager.rs  protocol.rs  session.rs
nebula-mcp/src/transport/: http.rs  mod.rs  stdio.rs
nebula-python/: Cargo.toml
nebula-python/src/: emit.rs  error.rs  layout.rs  lib.rs
nebula-python/tests/: div_tests.rs  parity_tests.rs  python_module_integration.rs
nebula-runtime/: Cargo.toml
nebula-runtime/src/: builtins.rs  diagnostic_extract.rs  lib.rs  limits.rs  probe.rs  probe_bundle.rs  probe_manifest.rs  secrets.rs  telemetry_format.rs  value_json.rs
nebula-runtime/tests/: builtin_sync.rs  div_tests.rs  field_access_tests.rs  limits_tests.rs  mcp_tests.rs  probe_tests.rs  push_tests.rs  runbook_tests.rs  schema_tests.rs  secrets_tests.rs  telemetry_tests.rs
nebula-spec/: SPEC.md
nebula-syntax/: Cargo.toml
nebula-syntax/src/: diagnostic_extract.rs  lexer.rs  lib.rs  parser.rs
nebula-syntax/src/parser/: error.rs  expr.rs  mod.rs  stmt.rs
nebula-syntax/tests/: error_tests.rs  parse_tests.rs
nebula-test-support/: Cargo.toml
nebula-test-support/golden/errors/: duplicate_function.golden  lex_invalid_char.golden  parse_unexpected.golden  type_mismatch.golden  undefined_fn.golden
nebula-test-support/golden/fmt/: end_demo.golden
nebula-test-support/src/: lib.rs
nebula-test-support/tests/: diagnostics.rs  e2e_examples.rs  fmt_roundtrip.rs  pipeline.rs
nebula-types/: Cargo.toml
nebula-types/src/: builtins.rs  checker.rs  diagnostic_extract.rs  error.rs  expr.rs  lib.rs  program.rs  report.rs  resolve.rs  scope.rs  util.rs
nebula-types/tests/: diagnostic_json_tests.rs  duplicate_symbol_tests.rs  empty_collection_tests.rs  field_access_tests.rs  report_tests.rs  sector_tests.rs
probes/: bundle.json  host.json  mcp_stdio.json  runbook.json
python/: README.md  pyproject.toml
python/nebula_runtime/: __init__.py  builtins.py  errors.py  mcp_client.py  probes.py  runtime.py  secrets.py  telemetry.py  truthy.py  values.py
python/nebula_runtime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
schemas/: compile-record.schema.json  diagnostic.schema.json  nebula-value.schema.json  probe-jsonl-event.schema.json  probe-manifest.schema.json  run-record.schema.json  telemetry-event.schema.json
scripts/: mcp_mock_http.py  mcp_mock_stdio.py  nebula_agent.py  probe_ok.py  probe_status.py  runbook_check_health.py  runbook_fetch_status.py
std/: core.neb  math.neb
