[workspace]
resolver = "2"
members = [
    "nebula-ast",
    "nebula-syntax",
    "nebula-load",
    "nebula-types",
    "nebula-ir",
    "nebula-runtime",
    "nebula-fmt",
    "nebula-cli",
    "nebula-python",
    "nebula-mcp",
    "nebula-test-support",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
logos = "0.15"
clap = { version = "4", features = ["derive"] }