[package]
name = "nebula-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nebula"
path = "src/main.rs"

[dependencies]
nebula-ast = { path = "../nebula-ast" }
nebula-syntax = { path = "../nebula-syntax" }
nebula-load = { path = "../nebula-load" }
nebula-types = { path = "../nebula-types" }
nebula-ir = { path = "../nebula-ir" }
nebula-runtime = { path = "../nebula-runtime" }
nebula-fmt = { path = "../nebula-fmt" }
nebula-python = { path = "../nebula-python" }
clap.workspace = true
miette.workspace = true

[dev-dependencies]
nebula-test-support = { path = "../nebula-test-support" }