[package]
name = "nebula-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nebula"
path = "src/main.rs"

[dependencies]
nebula-ast = { path = "../nebula-ast" }
nebula-ir = { path = "../nebula-ir" }
nebula-python = { path = "../nebula-python" }
nebula-diagnostics = { path = "../nebula-diagnostics" }
nebula-host = { path = "../nebula-host" }
clap.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
nebula-test-support = { path = "../nebula-test-support" }
serde.workspace = true
serde_json.workspace = true