[package]
name = "nebula-host"
version.workspace = true
edition.workspace = true
description = "In-process embedding API for Nebula agent runtimes"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nebula-ast = { path = "../nebula-ast" }
nebula-syntax = { path = "../nebula-syntax" }
nebula-load = { path = "../nebula-load" }
nebula-fmt = { path = "../nebula-fmt" }
nebula-types = { path = "../nebula-types" }
nebula-ir = { path = "../nebula-ir" }
nebula-runtime = { path = "../nebula-runtime" }
nebula-python = { path = "../nebula-python" }
nebula-diagnostics = { path = "../nebula-diagnostics" }
miette.workspace = true

[dev-dependencies]
nebula-test-support = { path = "../nebula-test-support" }
serde_json = "1"