[package]
name = "nebula-ir"
version.workspace = true
edition.workspace = true

[dependencies]
nebula-ast = { path = "../nebula-ast" }
nebula-types = { path = "../nebula-types" }
miette.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
nebula-syntax = { path = "../nebula-syntax" }
nebula-types = { path = "../nebula-types" }