[package]
name = "nebula-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
inventory.workspace = true
nebula-ast = { path = "../nebula-ast" }
nebula-builtins = { path = "../nebula-builtins" }
nebula-ir = { path = "../nebula-ir" }
miette.workspace = true
thiserror.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nebula-mcp = { path = "../nebula-mcp" }

[dev-dependencies]
nebula-host = { path = "../nebula-host" }
nebula-syntax = { path = "../nebula-syntax" }
nebula-types = { path = "../nebula-types" }
nebula-load = { path = "../nebula-load" }
nebula-test-support = { path = "../nebula-test-support" }
jsonschema = "0.29"
serde_json = "1"