[package]
name = "nebula-test-support"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
nebula-ast = { path = "../nebula-ast" }
nebula-syntax = { path = "../nebula-syntax" }
nebula-load = { path = "../nebula-load" }
nebula-types = { path = "../nebula-types" }
nebula-ir = { path = "../nebula-ir" }
nebula-runtime = { path = "../nebula-runtime" }
nebula-fmt = { path = "../nebula-fmt" }