[package]
name = "nebula-test-support"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
nebula-host = { path = "../nebula-host" }
nebula-ir = { path = "../nebula-ir" }
nebula-runtime = { path = "../nebula-runtime" }
nebula-fmt = { path = "../nebula-fmt" }
nebula-syntax = { path = "../nebula-syntax" }
nebula-types = { path = "../nebula-types" }