[package]
name = "nebula-types"
version.workspace = true
edition.workspace = true

[dependencies]
nebula-ast = { path = "../nebula-ast" }
nebula-builtins = { path = "../nebula-builtins" }
miette.workspace = true
thiserror.workspace = true

[dev-dependencies]
nebula-syntax = { path = "../nebula-syntax" }

[[test]]
name = "sector_tests"
path = "tests/sector_tests.rs"