[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula-runtime"
version = "0.1.0"
description = "Runtime shim for Nebula's Python backend (nebula compile --target python)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["nebula", "transpiler", "agents", "codegen"]

[project.urls]
Homepage = "https://github.com/PeytonNowlin/Nebula"
Repository = "https://github.com/PeytonNowlin/Nebula"

[tool.setuptools]
packages = ["nebula_runtime"]
